Fixed spacing in manager page

--- a/client/src/styles/Manager.css
+++ b/client/src/styles/Manager.css
@@ -16,11 +16,6 @@
   padding: 8px;
 }
 
-.MenuItemsList {
-  flex: 1;
-  margin-right: 20px;
-}
-
 .MenuItemsList li {
   cursor: pointer;
   padding: 8px;
@@ -39,6 +34,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
+  margin-right: 10px;
 }
 
 .ButtonColumn button {
